--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Yaoyao Liu
 position: Postdoctoral Fellow
 affiliation: Johns Hopkins University
 affiliation_link: https://cs.jhu.edu/
-affiliation_logo: ./assets/img/LogoWhite.jpg
+affiliation_logo: ./assets/img/LogoWhite1.jpg
 email: yliu538 (at) jhu.edu
 
 # Search Engine Optimization (SEO)
